--- a/homepage.html
+++ b/homepage.html
@@ -48,6 +48,9 @@
 
 <div class="w3-center">
 <button class="button" onclick="goto()"><span> Apply Now ! </span></button>
+<button class="button"><span> Edit Member </span></button>
+<button class="button"><span> View Card ! </span></button>
+
 </div>
 
 <br>
